# goodcup_django

./: .gitignore  load_properties.py  passenger_wsgi.py  pyproject.toml  requirementx.txt
api_app/: schemas.py  urls.py  views.py
catalog_app/: admin.py  converters.py  models.py  schemas.py
catalog_app/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at_and_more.py  0003_propertyrecord.py  0004_alter_propertyrecord_options_and_more.py  0005_goodimage.py  0006_good_slug.py  0007_category_slug.py  0008_category_pic_name.py  0009_good_k.py  0010_alter_good_k.py  0011_сompilation_сompilationitem.py  0012_rename_сompilation_compilation_and_more.py  (+7 more)
client_app/: admin.py  apps.py  converters.py  models.py  schemas.py
doc_app/: admin.py  apps.py  converters.py  models.py  schemas.py
order_app/: admin.py  apps.py  converters.py  models.py  schemas.py
page_app/: admin.py  apps.py  converters.py  models.py  schemas.py
price_app/: admin.py  apps.py  models.py  schemas.py
repositories/: client_repository.py  doc_repository.py  good_repository.py  order_repository.py  page_repository.py  price_repository.py  property_repository.py  region_repository.py  settings_repository.py  user_repository.py
server/: models.py  settings.py  urls.py
services/: client_service.py  doc_service.py  download_goods_to_file.py  good_service.py  order_service.py  page_service.py  price_service.py  property_service.py  region_service.py  sitemap_service.py  upload_client_file.py  upload_properties_file.py  user_service.py
settings_app/: admin.py  apps.py  models.py
(+39 files in other folders)
